--- a/client/Changelog
+++ b/client/Changelog
@@ -2,3 +2,10 @@
 Thu Apr 25 17:30:06 CEST 2002 <deneb-nx@penguin.it>
 Initial main import
 Partial root.c cleanup
+
+Fri Apr 26 23:00:41 CEST 2002 <deneb-nx@penguin.it>
+Added working makefile stolen from aping
+
+
+Sat Apr 27 02:19:57 CEST 2002 <deneb-nx@penguin.it>
+Cleaned enviroment catchup
